# SciKGraph

./: .gitignore  Analyses.py  OClustR.py  README.md  SciKGraph.ipynb  SciKGraph.py  __init__.py  babelfy.py  compareCovers.ipynb  pyproject.toml  requirements.txt
saveFiles/: clusters1.txt  clusters2.txt  lastSession.sckg
scikgraph/: Agglomerative_clusters.py  Analyses.py  OClustR.py  SciKGraph.py  __init__.py  __main__.py  app.py  babelfy.py
scikgraph/static/: custom.js  main.css  main.js  onmi  render-panel.js  styles_template.js
scikgraph/templates/: analyze.html  createSciKGraph.html  evolution.html
static/: custom.js  main.js  myscripts.js  networks.js  sciKGraph.cx  style.css  styles.js
static/bla/: Agglomerative_clusters.py  Analyses.py  OClustR.py  SciKGraph.py  custom.js  main.css  myscripts.js  networks.js  sciKGraph.cx  styles (copy).js  styles.js
static/bla/temp/: networks.js  styles2.js
static/bla/temp/bla/: styles.js
static/temp/: styles-create.js  styles.js
templates/: analyze.html  createSciKGraph.html  evolution.html
